--- a/clock.html
+++ b/clock.html
@@ -213,6 +213,7 @@
             vertical-align: top;
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4701743778844774" crossorigin="anonymous"></script>
 </head>
 
 <body>
